###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(
    name = "state_machine_project",
    version = "0.1.0",
    compatibility_level = 1,
)

# Add GoogleTest via Bzlmod
bazel_dep(name = "googletest", version = "1.15.2")
